--- a/package.json
+++ b/package.json
@@ -1,29 +1,52 @@
 {
-  "name": "atalanta_frontend_ii",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.8.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0"
-  }
+	"name": "atalanta_frontend_ii",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emotion/cache": "latest",
+		"@emotion/react": "latest",
+		"@emotion/server": "latest",
+		"@emotion/styled": "latest",
+		"@mui/icons-material": "latest",
+		"@mui/material": "latest",
+		"@paypal/react-paypal-js": "^7.8.0",
+		"@reduxjs/toolkit": "^1.8.6",
+		"axios": "^0.27.2",
+		"framer-motion": "^6.3.6",
+		"js-cookie": "^3.0.1",
+		"jsonwebtoken": "^8.5.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-google-recaptcha": "^2.1.0",
+		"react-hook-form": "^7.31.1",
+		"react-hot-toast": "^2.2.0",
+		"react-imask": "^6.4.2",
+		"react-input-mask": "^2.0.4",
+		"react-intersection-observer": "^9.2.2",
+		"react-number-format": "^4.9.3",
+		"react-redux": "^8.0.4",
+		"react-swipeable-views": "^0.14.0",
+		"redux": "^4.2.0",
+		"sharp": "^0.30.6"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.8.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"eslint": "^9.8.0",
+		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint-plugin-react-refresh": "^0.4.9",
+		"globals": "^15.9.0",
+		"typescript": "^5.5.3",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.4.0"
+	}
 }
