--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@mui/material": "latest",
 		"@paypal/react-paypal-js": "^7.8.0",
 		"@reduxjs/toolkit": "^1.8.6",
+		"@tanstack/react-query": "^5.51.23",
+		"@tanstack/react-query-devtools": "^5.51.23",
 		"axios": "^0.27.2",
 		"framer-motion": "^6.3.6",
 		"js-cookie": "^3.0.1",
@@ -32,6 +34,7 @@
 		"react-intersection-observer": "^9.2.2",
 		"react-number-format": "^4.9.3",
 		"react-redux": "^8.0.4",
+		"react-router-dom": "^6.26.0",
 		"react-swipeable-views": "^0.14.0",
 		"redux": "^4.2.0",
 		"sharp": "^0.30.6"
