--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-google-recaptcha": "^2.1.0",
+		"react-helmet": "^6.1.0",
 		"react-hook-form": "^7.31.1",
 		"react-hot-toast": "^2.2.0",
 		"react-imask": "^6.4.2",
@@ -41,8 +42,10 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.8.0",
+		"@types/node": "^22.2.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"@types/react-helmet": "^6.1.11",
 		"@vitejs/plugin-react": "^4.3.1",
 		"eslint": "^9.8.0",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
