--- a/package.json
+++ b/package.json
@@ -37,15 +37,19 @@
 		"react-redux": "^8.0.4",
 		"react-router-dom": "^6.26.0",
 		"react-swipeable-views": "^0.14.0",
+		"react-swipeable-views-utils": "^0.14.0",
 		"redux": "^4.2.0",
 		"sharp": "^0.30.6"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.8.0",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^22.2.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/react-helmet": "^6.1.11",
+		"@types/react-swipeable-views": "^0.13.5",
+		"@types/react-swipeable-views-utils": "^0.13.7",
 		"@vitejs/plugin-react": "^4.3.1",
 		"eslint": "^9.8.0",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
