--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
 		"@types/node": "^22.2.0",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"@types/react-google-recaptcha": "^2.1.9",
 		"@types/react-helmet": "^6.1.11",
+		"@types/react-input-mask": "^3.0.5",
 		"@types/react-swipeable-views": "^0.13.5",
 		"@types/react-swipeable-views-utils": "^0.13.7",
 		"@vitejs/plugin-react": "^4.3.1",
