--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-swipeable-views": "^0.14.0",
 		"react-swipeable-views-utils": "^0.14.0",
 		"redux": "^4.2.0",
+		"redux-persist": "^6.0.0",
 		"sharp": "^0.30.6"
 	},
 	"devDependencies": {
