--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-input-mask": "^2.0.4",
 		"react-intersection-observer": "^9.2.2",
 		"react-number-format": "^4.9.3",
+		"react-paypal-button-v2": "^2.6.3",
 		"react-redux": "^8.0.4",
 		"react-router-dom": "^6.26.0",
 		"react-swipeable-views": "^0.14.0",
