--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@mui/material": "latest",
 		"@paypal/react-paypal-js": "^7.8.0",
 		"@reduxjs/toolkit": "^1.8.6",
+		"@stripe/react-stripe-js": "^2.8.0",
+		"@stripe/stripe-js": "^4.3.0",
 		"@tanstack/react-query": "^5.51.23",
 		"@tanstack/react-query-devtools": "^5.51.23",
 		"axios": "^0.27.2",
