--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-dom": "^18.3.1",
 		"react-google-recaptcha": "^2.1.0",
 		"react-helmet": "^6.1.0",
+		"react-helmet-async": "^2.0.5",
 		"react-hook-form": "^7.31.1",
 		"react-hot-toast": "^2.2.0",
 		"react-imask": "^6.4.2",
