--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 		"@tanstack/react-query-devtools": "^5.51.23",
 		"axios": "^0.27.2",
 		"framer-motion": "^6.3.6",
+		"i": "^0.3.7",
 		"js-cookie": "^3.0.1",
 		"jsonwebtoken": "^8.5.1",
+		"npm": "^10.8.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-google-recaptcha": "^2.1.0",
@@ -37,14 +39,13 @@
 		"react-input-mask": "^2.0.4",
 		"react-intersection-observer": "^9.2.2",
 		"react-number-format": "^4.9.3",
-		"react-paypal-button-v2": "^2.6.3",
 		"react-redux": "^8.0.4",
 		"react-router-dom": "^6.26.0",
-		"react-swipeable-views": "^0.14.0",
-		"react-swipeable-views-utils": "^0.14.0",
 		"redux": "^4.2.0",
 		"redux-persist": "^6.0.0",
-		"sharp": "^0.30.6"
+		"sharp": "^0.30.6",
+		"swiper": "^11.1.10",
+		"uninstall": "^0.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.8.0",
@@ -55,8 +56,6 @@
 		"@types/react-google-recaptcha": "^2.1.9",
 		"@types/react-helmet": "^6.1.11",
 		"@types/react-input-mask": "^3.0.5",
-		"@types/react-swipeable-views": "^0.13.5",
-		"@types/react-swipeable-views-utils": "^0.13.7",
 		"@vitejs/plugin-react": "^4.3.1",
 		"eslint": "^9.8.0",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
