--- a/build.yml
+++ b/build.yml
@@ -3,7 +3,7 @@ name: Deploy to AWS App Runner
 on:
     push:
         branches:
-            - main
+            - master
 
 jobs:
     build-and-deploy:
