--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
             - name: Deploy to AWS App Runner
               id: deploy-apprunner
               run: |
-                  aws apprunner update-service --service-arn <your-service-arn> --source-configuration ImageRepository={"ImageIdentifier":"533267071464.dkr.ecr.us-east-1.amazonaws.com/atalanta-frontend:latest","ImageConfiguration":{"Port":"80"}}
+                  aws apprunner update-service --service-arn arn:aws:apprunner:us-east-1:533267071464:service/atalanta-laravel-client/3ebb62f0edff4b2cb697d46766422063 --source-configuration '{"ImageRepository":{"ImageIdentifier":"533267071464.dkr.ecr.us-east-1.amazonaws.com/atalanta-frontend:latest","ImageConfiguration":{"Port":"80"}}}'
               env:
                   AWS_REGION: us-east-1
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
