--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,21 +16,20 @@ jobs:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v1
 
-            - name: Verify AWS Credentials
-              run: |
-                  echo "AWS_ACCESS_KEY_ID is set"
-                  echo "AWS_SECRET_ACCESS_KEY is set"
-              env:
-                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16.x'
 
-            - name: Verify AWS CLI
+            - name: Add environment variables
               run: |
-                  aws sts get-caller-identity
-              env:
-                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  AWS_REGION: us-east-1
+                  echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
+                  echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
+                  echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+                  echo "VITE_PAYPAL_CLIENT_ID=${{ secrets.VITE_PAYPAL_CLIENT_ID }}" >> .env
+                  echo "VITE_STRIPE_PUBLISHABLE_KEY=${{ secrets.VITE_STRIPE_PUBLISHABLE_KEY }}" >> .env
+                  echo "RECAPTCHA_SITE_KEY=${{ secrets.RECAPTCHA_SITE_KEY }}" >> .env
+                  echo "RECAPTCHA_SECRET_KEY=${{ secrets.RECAPTCHA_SECRET_KEY }}" >> .env
 
             - name: Log in to Amazon ECR
               id: login-ecr
@@ -45,3 +44,12 @@ jobs:
               id: build-and-push
               run: |
                   docker buildx build --platform linux/amd64 --tag 533267071464.dkr.ecr.us-east-1.amazonaws.com/atalanta-frontend:latest --push .
+
+            - name: Deploy to AWS App Runner
+              id: deploy-apprunner
+              run: |
+                  aws apprunner update-service --service-arn arn:aws:apprunner:us-east-1:533267071464:service/atalanta-laravel-client/3ebb62f0edff4b2cb697d46766422063 --source-configuration '{"ImageRepository":{"ImageIdentifier":"533267071464.dkr.ecr.us-east-1.amazonaws.com/atalanta-frontend:latest","ImageConfiguration":{"Port":"80"}}}'
+              env:
+                  AWS_REGION: us-east-1
+                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
