--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "./deploy.sh"
 	},
 	"dependencies": {
 		"@emotion/cache": "latest",
@@ -23,6 +24,7 @@
 		"@tanstack/react-query": "^5.51.23",
 		"@tanstack/react-query-devtools": "^5.51.23",
 		"axios": "^0.27.2",
+		"dotenv": "^16.4.5",
 		"framer-motion": "^6.3.6",
 		"i": "^0.3.7",
 		"js-cookie": "^3.0.1",
